(tests
 (names
  test_scalar_float
  test_optional_syntax
  test_record_float
  test_value_exn
  test_int64_none
  test_int32_none
  test_nativeint_none
  test_float32_none
  test_int8_none
  test_int16_none
  test_int_none
  test_char_none
  test_float_sentinel_default
  test_record_literal_none
  test_record_partial_none
  test_contract_field
  test_mixed_contract_field
  test_nested_derived_contract)
 (libraries unboxed test_helpers)
 (preprocess
  (pps ppx_uopt ppx_jane)))
